インデックスにステージング

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Camera Roll/IMG_9694.png" class="d-block w-100" alt="...">
+      <img src="Camera Roll/IMG_3122.JPG" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="Camera Roll/insta_sad.png" class="d-block w-100" alt="...">
+      <img src="Camera Roll/IMG_3541.JPG" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="Camera Roll/insta_rain.png" class="d-block w-100" alt="...">
+      <img src="Camera Roll/IMG_9694.JPG" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
